clusters/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-app
  namespace: test
spec:
  selector:
    matchLabels:
      app: myapp-app
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-app
    spec:
      containers:
      - name: gymie
        image: docker.io/utsav0077/test-ci:main-7e5021b-1710857008 # { "$imagepolicy":"test:app" }
        ports:
        - containerPort: 8000
          name: app-port
