clusters/deploy/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namesapce: test
spec:
  selector:
    matchLabels:
      app: myapp-db
  serviceName: svc-db
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.3.0
          ports:
            - containerPort: 3306
              name: myapp-db
          volumeMounts:
            - mountPath: /var/lib/mysql/
              name: db-vol
      volumes:
        - name: db-vol
          persistentVolumeClaim:
            claimName: my-pvc
