clusters/deploy/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  # namespace: test
spec:
  selector:
    app: myapp-app
  ports:
  - port: 9001
    targetPort: 8000
