clusters/deploy/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-db
  namespace: test
  labels: 
    app: myapp-db
spec:
  selector:
    app: myapp-db
  ports:
  - port: 3306  
    targetPort: 3306
